--- a/src/app/features/landing/projects/projects.component.html
+++ b/src/app/features/landing/projects/projects.component.html
@@ -1,4 +1,4 @@
-<app-landing-section-container headline="Projects">
+<app-landing-section-container headline="projects">
   <ul
     class="grid max-lg:grid-cols-[repeat(auto-fit,_minmax(20.5rem,_1fr))] gap-x-7 gap-y-8"
   >
