--- a/src/app/features/landing/resume/components/education/education.component.html
+++ b/src/app/features/landing/resume/components/education/education.component.html
@@ -1,4 +1,4 @@
-<app-resume-section headline="Education">
+<app-resume-section headline="resume.education.title">
   <app-resume-items>
     <li>
       <app-resume-item
