--- a/src/app/features/landing/resume/components/experience/experience.component.html
+++ b/src/app/features/landing/resume/components/experience/experience.component.html
@@ -1,4 +1,4 @@
-<app-resume-section headline="Experience">
+<app-resume-section headline="resume.experience.title">
   <app-resume-items>
     <li>
       <app-resume-item headline="Servinet Computers" date="2024 - Current" />
