--- a/src/app/features/landing/components/landing-subtitle/landing-subtitle.component.html
+++ b/src/app/features/landing/components/landing-subtitle/landing-subtitle.component.html
@@ -1,1 +1,3 @@
-<h3 class="text-xl sm:text-2xl md:text-3xl font-semibold">{{ headline }}.</h3>
+<h3 class="text-xl sm:text-2xl md:text-3xl font-semibold">
+  {{ value | translate }}.
+</h3>
