--- a/src/app/features/landing/components/landing-title/landing-title.component.html
+++ b/src/app/features/landing/components/landing-title/landing-title.component.html
@@ -1,1 +1,3 @@
-<h2 class="text-3xl sm:text-4xl md:text-5xl font-semibold">{{ headline }}.</h2>
+<h2 class="text-3xl sm:text-4xl md:text-5xl font-semibold">
+  {{ value | translate }}.
+</h2>
