--- a/src/app/features/landing/contact/contact.component.html
+++ b/src/app/features/landing/contact/contact.component.html
@@ -1,3 +1,3 @@
-<app-landing-section-container headline="Get In Touch">
+<app-landing-section-container headline="contact">
   <app-contact-form />
 </app-landing-section-container>
