--- a/src/app/features/landing/resume/resume.component.html
+++ b/src/app/features/landing/resume/resume.component.html
@@ -1,4 +1,4 @@
-<app-landing-section-container headline="Resume">
+<app-landing-section-container headline="resume">
   <app-education />
   <app-experience />
   <app-skills />
