feat: fetch skills from json

--- a/src/app/features/landing/resume/components/skill-card/skill-card.component.html
+++ b/src/app/features/landing/resume/components/skill-card/skill-card.component.html
@@ -5,6 +5,8 @@
     {{ value | translate }}
   </h4>
   <ul class="flex items-center justify-start flex-wrap gap-3.5">
-    <ng-content />
+    @for (skill of skills(); track skill.name) {
+    <li><app-skill-item [skill]="skill.name" /></li>
+    }
   </ul>
 </article>
