--- a/src/app/features/landing/resume/components/skills/skills.component.html
+++ b/src/app/features/landing/resume/components/skills/skills.component.html
@@ -2,37 +2,11 @@
   <div
     class="grid grid-cols-[repeat(auto-fit,_minmax(20rem,_1fr))] gap-x-10 gap-y-7"
   >
-    <app-skill-card headline="languages">
-      <app-skill-item skill="Java" />
-      <app-skill-item skill="JavaScript" />
-      <app-skill-item skill="TypeScript" />
-      <app-skill-item skill="HTML" />
-      <app-skill-item skill="CSS" />
-      <app-skill-item skill="SQL" />
-      <app-skill-item skill="Dart" />
-    </app-skill-card>
-    <app-skill-card headline="backend">
-      <app-skill-item skill="Spring" />
-      <app-skill-item skill="Node.js" />
-      <app-skill-item skill="Express.js" />
-    </app-skill-card>
-    <app-skill-card headline="frontend">
-      <app-skill-item skill="Angular" />
-      <app-skill-item skill="Tailwind CSS" />
-      <app-skill-item skill="Bootstrap" />
-    </app-skill-card>
-    <app-skill-card headline="mobile">
-      <app-skill-item skill="Flutter" />
-    </app-skill-card>
-    <app-skill-card headline="databases">
-      <app-skill-item skill="PostgreSQL" />
-      <app-skill-item skill="MySQL" />
-      <app-skill-item skill="Firestore" />
-      <app-skill-item skill="MongoDB" />
-    </app-skill-card>
-    <app-skill-card headline="tools">
-      <app-skill-item skill="Git" />
-      <app-skill-item skill="Docker" />
-    </app-skill-card>
+    <app-skill-card category="language" />
+    <app-skill-card category="backend" />
+    <app-skill-card category="frontend" />
+    <app-skill-card category="mobile" />
+    <app-skill-card category="database" />
+    <app-skill-card category="tool" />
   </div>
 </app-resume-section>
