--- a/src/app/features/landing/resume/components/experience/experience.component.html
+++ b/src/app/features/landing/resume/components/experience/experience.component.html
@@ -1,10 +1,10 @@
 <app-resume-section headline="resume.experience.title">
   <app-resume-items>
-    <li>
-      <app-resume-item headline="Servinet Computers" date="2024 - Current" />
+    <!--li>
+      <app-education-item headline="Servinet Computers" date="2024 - Current" />
     </li>
     <li>
-      <app-resume-item headline="NoCountry" date="2021 - 2022" />
-    </li>
+      <app-education-item headline="NoCountry" date="2021 - 2022" />
+    </li-->
   </app-resume-items>
 </app-resume-section>
