--- a/src/app/features/landing/resume/components/education-item/education-item.component.html
+++ b/src/app/features/landing/resume/components/education-item/education-item.component.html
@@ -5,7 +5,7 @@
   <h5 class="text-base sm:text-lg md:text-xl font-semibold">
     {{ education.institution }}
   </h5>
-  <p class="text-sm sm:text-base md:text-lg font-medium text-primary-500">
+  <p class="text-sm sm:text-base md:text-lg font-semibold text-primary-500">
     {{ education.year }}
   </p>
 </article>
