--- a/src/app/components/textarea/textarea.component.html
+++ b/src/app/components/textarea/textarea.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-2">
-  <label [for]="name" class="text-sm sm:text-base font-medium">
+  <label [for]="name" class="text-sm sm:text-base font-semibold">
     {{ label | translate }}
   </label>
   <textarea
