--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   --font-mono: "Roboto Mono", monospace;
 }
