--- a/src/app/features/landing/resume/components/experience-item/experience-item.component.html
+++ b/src/app/features/landing/resume/components/experience-item/experience-item.component.html
@@ -8,11 +8,9 @@
   <p class="text-sm sm:text-base md:text-lg font-semibold text-primary-500">
     {{ experience.year }}
   </p>
-  <ul class="list-disc flex flex-col gap-1">
-    @for (keypoint of experience.keypoints; track keypoint) {
-    <li
-      class="ml-5 font-medium text-gray-600 text-xs sm:text-sm md:text-base text-pretty"
-    >
+  <ul class="list-disc flex flex-col gap-1 mt-1">
+    @for (keypoint of experience.keypoints; track $index) {
+    <li class="ml-5 font-medium text-gray-700 text-sm sm:text-base text-pretty">
       {{ keypoint }}
     </li>
     }
