--- a/src/app/features/landing/projects/components/project-item/project-item.component.html
+++ b/src/app/features/landing/projects/components/project-item/project-item.component.html
@@ -1,16 +1,16 @@
 <article
-  class="p-5 flex max-lg:flex-col gap-5 shadow-md shadow-primary-200 bg-primary-50 rounded-4xl hover:-translate-y-1 hover:shadow-lg transition-all"
+  class="p-5 flex max-lg:flex-col gap-5 shadow-md shadow-primary-200 bg-primary-50 rounded-4xl hover:-translate-y-1 hover:shadow-lg transition-all cursor-pointer ring-primary-300 hover:ring-4"
 >
   <img
     src="https://picsum.photos/400/300"
     alt="random-img"
     class="rounded-4xl object-cover aspect-video"
   />
-  <div class="flex flex-col justify-between gap-5">
+  <div class="flex flex-col justify-between gap-5 lg:py-2.5">
     <h3
-      class="text-center text-xl sm:text-2xl md:text-3xl font-semibold md:max-lg:h-[4.5rem] flex items-center justify-center"
+      class="text-center text-xl sm:text-2xl md:text-3xl font-bold md:max-lg:h-[4.5rem] flex items-center justify-center"
     >
-      {{ project.name }}
+      {{ project.title }}
     </h3>
     <p
       class="text-sm sm:text-base md:text-lg overflow-ellipsis line-clamp-3 lg:line-clamp-1"
@@ -19,8 +19,14 @@
       suscipit. Fugit dolorem nihil ipsum perspiciatis eius! Harum saepe, quo
       sit labore sequi doloremque rerum sapiente iure laboriosam vitae.
     </p>
-    <footer class="lg:w-fit lg:ms-auto">
-      <app-button>View project</app-button>
-    </footer>
+    <ul class="flex items-center gap-3 flex-wrap">
+      @for (skill of project.skills; track $index) {
+      <li
+        class="bg-primary-100 px-2 py-1.5 rounded-xl text-xs sm:text-sm md:text-base font-medium border border-primary-200 hover:-translate-y-0.5 hover:shadow shadow-primary-300 transition-all duration-150"
+      >
+        {{ skill }}
+      </li>
+      }
+    </ul>
   </div>
 </article>
