link: project card with details page route

--- a/src/app/features/landing/projects/components/project-item/project-item.component.html
+++ b/src/app/features/landing/projects/components/project-item/project-item.component.html
@@ -1,5 +1,6 @@
 <article
   class="p-5 flex max-lg:flex-col gap-5 shadow-md shadow-primary-200 bg-primary-50 rounded-4xl hover:-translate-y-1 hover:shadow-lg transition-all cursor-pointer ring-primary-300 hover:ring-4"
+  (click)="goToProject()"
 >
   <img
     src="https://picsum.photos/400/300"
