update: projects responsive layout

--- a/src/app/features/landing/projects/components/project-item/project-item.component.html
+++ b/src/app/features/landing/projects/components/project-item/project-item.component.html
@@ -1,5 +1,5 @@
 <article
-  class="p-5 flex max-lg:flex-col gap-5 shadow-md shadow-primary-200 bg-primary-50 rounded-4xl hover:-translate-y-1 hover:shadow-lg transition-all cursor-pointer ring-primary-300 hover:ring-4"
+  class="p-5 flex max-xl:flex-col gap-5 shadow-md shadow-primary-200 bg-primary-50 rounded-4xl hover:-translate-y-1 hover:shadow-lg transition-all cursor-pointer ring-primary-300 hover:ring-4"
   (click)="goToProject()"
 >
   <img
@@ -7,9 +7,9 @@
     alt="random-img"
     class="rounded-4xl object-cover aspect-video"
   />
-  <div class="flex flex-col justify-between gap-5 lg:py-2.5">
+  <div class="flex flex-col justify-between gap-5 xl:py-2.5">
     <h3
-      class="text-center text-xl sm:text-2xl md:text-3xl font-bold md:max-lg:h-[4.5rem] flex items-center justify-center"
+      class="text-center text-xl sm:text-2xl md:text-3xl font-bold md:max-xl:h-[4.5rem] flex items-center justify-center"
     >
       {{ project.title }}
     </h3>
