refactor: landing sections structure

--- a/src/app/features/landing/resume/resume.component.html
+++ b/src/app/features/landing/resume/resume.component.html
@@ -1,5 +1,6 @@
 <app-landing-section-container headline="resume">
-  <app-education />
   <app-experience />
+  <app-education />
+  <app-certificates />
   <app-skills />
 </app-landing-section-container>
