update: certificates layout

--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -1,6 +1,8 @@
 <div class="p-5 flex max-lg:flex-col gap-5 lg:mt-16">
   <app-sidebar id="home" />
-  <main class="max-lg:pb-16 flex flex-col gap-14 w-full lg:ml-80">
+  <main
+    class="max-lg:pb-16 flex flex-col gap-14 max-lg:w-full lg:w-[calc(100%_-_20rem_-_1.25rem)] lg:ml-80"
+  >
     <app-resume id="resume" />
     <app-projects id="projects" />
     <app-contact id="contact" />
