--- a/src/app/features/landing/projects/components/project-item/project-item.component.html
+++ b/src/app/features/landing/projects/components/project-item/project-item.component.html
@@ -3,22 +3,20 @@
   (click)="goToProject()"
 >
   <img
-    src="https://picsum.photos/400/300"
+    [src]="project.photoUrl || 'https://picsum.photos/400/300'"
     alt="random-img"
-    class="rounded-4xl object-cover aspect-video"
+    class="rounded-4xl object-cover aspect-video xl:w-2/5"
   />
-  <div class="flex flex-col justify-between gap-5 xl:py-2.5">
+  <div class="flex flex-col justify-between gap-5 xl:py-2.5 xl:w-3/5">
     <h3
       class="text-center text-xl sm:text-2xl md:text-3xl font-bold md:max-xl:h-[4.5rem] flex items-center justify-center"
     >
       {{ project.title }}
     </h3>
     <p
-      class="text-sm sm:text-base md:text-lg overflow-ellipsis line-clamp-3 lg:line-clamp-1"
+      class="text-sm sm:text-base md:text-lg overflow-ellipsis line-clamp-3 xl:line-clamp-2"
     >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quia quas
-      suscipit. Fugit dolorem nihil ipsum perspiciatis eius! Harum saepe, quo
-      sit labore sequi doloremque rerum sapiente iure laboriosam vitae.
+      {{ project.description || "No description available." }}
     </p>
     <ul class="flex items-center gap-3 flex-wrap">
       @for (skill of project.skills; track $index) {
