update: subtitle and skill designs

--- a/src/app/features/landing/resume/skills/components/skill-card/skill-card.component.html
+++ b/src/app/features/landing/resume/skills/components/skill-card/skill-card.component.html
@@ -1,5 +1,5 @@
 <article
-  class="flex flex-col gap-5 p-7 rounded-2xl shadow shadow-primary-300 hover:-translate-y-0.5 hover:shadow-md transition-all"
+  class="flex flex-col gap-5 pt-6 p-7 rounded-2xl shadow shadow-primary-300 hover:-translate-y-0.5 hover:shadow-md transition-all"
 >
   <h4
     class="text-center text-lg sm:text-xl md:text-2xl font-bold text-primary-700"
