--- a/src/app/features/landing/resume/skills/skills.component.html
+++ b/src/app/features/landing/resume/skills/skills.component.html
@@ -1,6 +1,6 @@
 <app-resume-section headline="resume.skills.title">
   <div
-    class="grid grid-cols-[repeat(auto-fit,_minmax(21rem,_1fr))] gap-x-5 gap-y-7"
+    class="grid grid-cols-[repeat(auto-fit,_minmax(21rem,_1fr))] gap-x-5 gap-y-7 mt-2.5"
   >
     <app-skill-card category="language" />
     <app-skill-card category="backend" />
