--- a/src/app/features/landing/components/landing-subtitle/landing-subtitle.component.html
+++ b/src/app/features/landing/components/landing-subtitle/landing-subtitle.component.html
@@ -1,3 +1,5 @@
-<h3 class="text-xl sm:text-2xl md:text-3xl font-bold">
+<h3
+  class="text-xl sm:text-2xl md:text-3xl font-bold pb-1 border-b border-primary-100"
+>
   {{ value | translate }}
 </h3>
