--- a/src/app/features/landing/resume/skills/components/skill-item/skill-item.component.html
+++ b/src/app/features/landing/resume/skills/components/skill-item/skill-item.component.html
@@ -1,5 +1,5 @@
 <li
-  class="px-3 py-1.5 rounded-xl bg-primary-50 text-center text-sm sm:text-base md:text-lg cursor-default shadow-sm shadow-primary-300 hover:shadow-primary-400 hover:scale-105 hover:shadow-md transition-all text-primary-500"
+  class="px-3 py-1.5 rounded-xl bg-primary-50 text-center text-sm sm:text-base md:text-lg cursor-default shadow-sm shadow-primary-300 hover:shadow-primary-400 hover:scale-105 hover:shadow-md active:shadow-primary-400 active:scale-105 active:shadow-md transition-all text-primary-500"
 >
   {{ skill }}
 </li>
