--- a/src/app/features/project-details/project-details.component.html
+++ b/src/app/features/project-details/project-details.component.html
@@ -1,1 +1,7 @@
-<p>project works!</p>
+<main class="lg:mt-16 p-5">
+  <h1
+    class="text-center text-3xl sm:text-4xl md:text-5xl font-bold text-pretty"
+  >
+    {{ project()?.title }}
+  </h1>
+</main>
