--- a/src/app/features/project-details/project-details.component.html
+++ b/src/app/features/project-details/project-details.component.html
@@ -1,7 +1,35 @@
-<main class="lg:mt-16 p-5">
-  <h1
-    class="text-center text-3xl sm:text-4xl md:text-5xl font-bold text-pretty"
-  >
-    {{ project()?.title }}
-  </h1>
+<main class="lg:mt-16 p-5 max-lg:pb-26">
+  <div class="flex flex-col md:grid md:grid-cols-2 gap-12">
+    <section class="flex flex-col gap-5">
+      <h1
+        class="text-center text-3xl sm:text-4xl md:text-5xl font-bold text-pretty"
+      >
+        {{ project()?.title }}
+      </h1>
+      <p class="text-base sm:text-lg md:text-xl text-pretty">
+        {{ project()?.description }}
+      </p>
+    </section>
+    <section class="flex flex-col gap-5">
+      <h2 class="text-center text-2xl sm:text-3xl md:text-4xl font-bold">
+        Gallery
+      </h2>
+      <div class="flex flex-col gap-7">
+        <figure class="p-8 border border-primary-300 rounded-3xl">
+          <img
+            [src]="selectedMedia()"
+            alt="cover-photo"
+            class="object-contain"
+          />
+        </figure>
+        <div class="flex items-center">
+          @for (media of project()?.media; track $index) {
+          <figure>
+            <img [src]="media" alt="media" class="object-cover max-w-48" />
+          </figure>
+          }
+        </div>
+      </div>
+    </section>
+  </div>
 </main>
