--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -1,5 +1,15 @@
-<main class="w-full min-h-dvh grid place-items-center">
-  <h1 class="text-gray-100 text-4xl flex flex-col font-semibold">
-    Hi! I'm <span class="text-accent-500">Alben Bustamante</span>
-  </h1>
+<main class="w-full min-h-dvh grid place-items-center p-3">
+  <div
+    class="w-full max-w-xl border-4 border-white p-5 sm:p-6 rounded-xl flex flex-col gap-5"
+  >
+    <h1 class="text-gray-100 text-4xl sm:text-5xl flex flex-col font-semibold">
+      Hi! I'm
+      <span class="text-5xl sm:text-6xl text-accent-500">Alben Bustamante</span>
+    </h1>
+    <button
+      class="text-base sm:text-lg border-2 border-accent-500 text-primary-50 w-full px-5 py-1.5 rounded-xl shadow-xs shadow-accent-900 cursor-pointer hover:ring-accent-500 hover:ring-1 hover:shadow-md hover:scale-105 duration-300"
+    >
+      View Resume
+    </button>
+  </div>
 </main>
