--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -1,4 +1,4 @@
-<main class="w-full min-h-dvh grid place-items-center p-3">
+<main class="w-full min-h-[calc(100dvh_-_5rem)] grid place-items-center p-3">
   <div
     class="w-full max-w-xl border-4 border-white p-5 sm:p-6 rounded-xl flex flex-col gap-5"
   >
