--- a/src/app/features/me/components/navbar/navbar.component.html
+++ b/src/app/features/me/components/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <header
-  class="sticky top-0 left-0 right-0 h-20 bg-primary-950 border-b border-accent-950"
+  class="sticky top-0 left-0 right-0 h-20 bg-primary-950 border-b border-accent-950 flex items-center justify-center px-3"
 >
+  <button class="flex items-center justify-start w-full h-20">
+    <svg menu-icon class="stroke-2 stroke-primary-500 size-14"></svg>
+  </button>
   <nav></nav>
 </header>
