--- a/src/app/features/me/components/navbar/navbar.component.html
+++ b/src/app/features/me/components/navbar/navbar.component.html
@@ -1,8 +1,15 @@
 <header
-  class="sticky top-0 left-0 right-0 h-20 bg-primary-950 border-b border-accent-950 flex items-center justify-center px-3"
+  class="sticky top-0 left-0 right-0 h-20 bg-primary-950 border-b border-accent-950 flex items-center justify-center px-3 z-40"
 >
   <button class="flex items-center justify-start w-full h-20">
     <svg menu-icon class="stroke-2 stroke-primary-500 size-14"></svg>
   </button>
-  <nav></nav>
+  <nav class="fixed inset-0 min-h-dvh bg-primary-700 z-50">
+    <ul class="flex flex-col gap-2 items-center justify-center size-full">
+      <app-navbar-item text="Home" route="/" class="w-full" />
+      <app-navbar-item text="About Me" route="/about-me" class="w-full" />
+      <app-navbar-item text="Projects" route="/projects" class="w-full" />
+      <app-navbar-item text="Hire Me" route="/hire-me" class="w-full" />
+    </ul>
+  </nav>
 </header>
