--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -1,8 +1,10 @@
 <main class="w-full min-h-[calc(100dvh_-_5rem)] grid place-items-center p-3">
   <div
-    class="w-full max-w-xl border-4 border-white p-5 sm:p-6 rounded-xl flex flex-col gap-5"
+    class="w-full max-w-xl border-4 border-white p-5 sm:p-6 rounded-xl flex flex-col gap-7"
   >
-    <h1 class="text-gray-100 text-4xl sm:text-5xl flex flex-col font-semibold">
+    <h1
+      class="text-gray-100 text-4xl sm:text-5xl flex flex-col gap-2 font-semibold"
+    >
       Hi! I'm
       <span class="text-5xl sm:text-6xl text-accent-500">Alben Bustamante</span>
     </h1>
