add: social icons to home

--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -8,6 +8,38 @@
       Hi! I'm
       <span class="text-5xl sm:text-6xl text-accent-500">Alben Bustamante</span>
     </h1>
+    <div class="flex items-center justify-between gap-2">
+      <app-social-button url="https://github.com/AlbenBustamante">
+        <svg
+          github-icon
+          class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-100"
+        ></svg>
+      </app-social-button>
+      <app-social-button url="https://linkedin.com/in/albenbustamante/">
+        <svg
+          linkedin-icon
+          class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-100"
+        ></svg>
+      </app-social-button>
+      <app-social-button url="https://discordapp.com/users/429028705533165580">
+        <svg
+          discord-icon
+          class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-100"
+        ></svg>
+      </app-social-button>
+      <app-social-button url="mailto:albenbustamante@outlook.com">
+        <svg
+          mail-icon
+          class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-100"
+        ></svg>
+      </app-social-button>
+      <app-social-button url="https://wa.me/573165574868">
+        <svg
+          whatsapp-icon
+          class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-100"
+        ></svg>
+      </app-social-button>
+    </div>
     <button
       class="text-base sm:text-lg border-2 border-accent-500 text-primary-50 w-full px-5 py-1.5 rounded-xl shadow-xs shadow-accent-900 cursor-pointer hover:ring-accent-500 hover:ring-1 hover:shadow-md hover:scale-105 duration-300"
     >
