--- a/src/app/features/me/about-me/about-me.component.html
+++ b/src/app/features/me/about-me/about-me.component.html
@@ -1,1 +1,24 @@
-<p>about-me works!</p>
+<main class="w-full min-h-[calc(100dvh_-_5rem)] p-3 sm:p-4 md:p-5">
+  <header
+    class="w-full min-h-[calc(100dvh_-_5rem_-_0.75rem_*_2)] sm:min-h-[calc(100dvh_-_5rem_-_2rem)] md:min-h-[calc(100dvh_-_5rem_-_2.5rem)] border-4 border-primary-50 rounded-xl p-5 sm:p-6 grid place-items-center"
+  >
+    <div class="flex flex-col gap-5">
+      <img
+        src="https://img.freepik.com/premium-vector/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-vector-illustration_561158-3396.jpg?semt=ais_incoming&w=740&q=80"
+        alt="profile picture"
+        class="rounded-full"
+      />
+      <h1
+        class="text-primary-50 text-3xl sm:text-4xl font-semibold text-center"
+      >
+        About Me
+      </h1>
+      <p class="text-lg text-primary-300">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores,
+        sint natus, quam perspiciatis nihil nisi porro quod molestiae ratione
+        ab, illum qui maiores. Officia atque adipisci fugiat non aperiam vero
+        ratione deleniti doloremque optio repellat.
+      </p>
+    </div>
+  </header>
+</main>
