--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -1,6 +1,8 @@
-<main class="w-full min-h-[calc(100dvh_-_5rem)] grid place-items-center p-3">
+<main
+  class="w-full min-h-[calc(100dvh_-_5rem)] grid place-items-center p-3 sm:p-4 md:p-5"
+>
   <article
-    class="w-full max-w-xl border-4 border-white p-5 sm:p-6 rounded-xl flex flex-col gap-7"
+    class="w-full max-w-xl border-4 border-white p-6 sm:p-7 md:p-8 rounded-xl flex flex-col gap-7"
   >
     <header class="flex flex-col gap-2.5">
       <h1
