add: tooltip to social buttons

--- a/src/app/features/me/components/social-button/social-button.component.html
+++ b/src/app/features/me/components/social-button/social-button.component.html
@@ -1,3 +1,10 @@
-<a [href]="url()" target="_blank">
-  <ng-content />
-</a>
+<div class="group relative">
+  <a [href]="url()" target="_blank">
+    <ng-content />
+  </a>
+  <span
+    class="invisible opacity-0 group-hover:visible group-hover:opacity-100 absolute -bottom-10 left-1/2 right-1/2 -translate-x-1/2 bg-primary-300 text-primary-900 text-center text-sm sm:text-base px-2 sm:px-3 py-1 rounded-3xl w-20 sm:w-24 duration-300"
+  >
+    {{ socialName() }}
+  </span>
+</div>
