--- a/src/app/features/me/components/social-media/social-media.component.html
+++ b/src/app/features/me/components/social-media/social-media.component.html
@@ -1,29 +1,41 @@
 <div class="flex items-center justify-between gap-2">
-  <app-social-button url="https://github.com/AlbenBustamante">
+  <app-social-button
+    url="https://github.com/AlbenBustamante"
+    socialName="GitHub"
+  >
     <svg
       github-icon
       class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
     ></svg>
   </app-social-button>
-  <app-social-button url="https://linkedin.com/in/albenbustamante/">
+  <app-social-button
+    url="https://linkedin.com/in/albenbustamante/"
+    socialName="LinkedIn"
+  >
     <svg
       linkedin-icon
       class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
     ></svg>
   </app-social-button>
-  <app-social-button url="https://discordapp.com/users/429028705533165580">
+  <app-social-button
+    url="https://discordapp.com/users/429028705533165580"
+    socialName="Discord"
+  >
     <svg
       discord-icon
       class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
     ></svg>
   </app-social-button>
-  <app-social-button url="mailto:albenbustamante@outlook.com">
+  <app-social-button
+    url="mailto:albenbustamante@outlook.com"
+    socialName="Email"
+  >
     <svg
       mail-icon
       class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
     ></svg>
   </app-social-button>
-  <app-social-button url="https://wa.me/573165574868">
+  <app-social-button url="https://wa.me/573165574868" socialName="WhatsApp">
     <svg
       whatsapp-icon
       class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
