add: skills with basic design

--- a/src/app/features/me/about-me/about-me.component.html
+++ b/src/app/features/me/about-me/about-me.component.html
@@ -1,3 +1,6 @@
-<main class="w-full min-h-[calc(100dvh_-_5rem)] p-3 sm:p-4 md:p-5">
+<main
+  class="w-full min-h-[calc(100dvh_-_5rem)] p-3 sm:p-4 md:p-5 flex flex-col gap-7"
+>
   <app-header />
+  <app-skills-and-technologies />
 </main>
