--- a/src/app/features/me/about-me/about-me.component.html
+++ b/src/app/features/me/about-me/about-me.component.html
@@ -3,5 +3,8 @@
 >
   <app-header />
   <app-skills-and-technologies />
-  <app-experience />
+  <div class="max-sm:flex max-sm:flex-col gap-7 w-full sm:grid sm:grid-cols-2">
+    <app-experience />
+    <app-education />
+  </div>
 </main>
