add: projects section

--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -1,1 +1,11 @@
-<p>projects works!</p>
+<main class="p-3 sm:p-4 md:p-5 flex flex-col gap-7">
+  <header class="flex flex-col gap-5">
+    <app-title headline="Projects" />
+    <p class="text-lg sm:text-xl text-primary-300">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ex
+      architecto perferendis eveniet id. Accusamus quod repellat deleniti
+      adipisci asperiores explicabo enim, quae magnam sed nisi sunt dolorem
+      suscipit quasi.
+    </p>
+  </header>
+</main>
