--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -1,4 +1,4 @@
-<main class="p-3 sm:p-4 md:p-5 flex flex-col gap-7">
+<main class="p-7 sm:px-10 md:px-16 flex flex-col gap-7">
   <header class="flex flex-col gap-5">
     <app-title headline="Projects" />
     <p class="text-lg sm:text-xl text-primary-300">
@@ -8,4 +8,9 @@
       suscipit quasi.
     </p>
   </header>
+  <section class="flex flex-col gap-5 items-center">
+    <app-subtitle headline="Featured Projects" />
+    <app-project />
+  </section>
+  <section></section>
 </main>
