--- a/src/app/features/me/hire-me/hire-me.component.html
+++ b/src/app/features/me/hire-me/hire-me.component.html
@@ -1,1 +1,4 @@
-<p>hire-me works!</p>
+<main class="p-7 sm:px-10 md:px-16 flex flex-col gap-7">
+  <app-title headline="Hire Me" />
+  <app-form />
+</main>
