--- a/src/app/features/me/hire-me/components/form/form.component.html
+++ b/src/app/features/me/hire-me/components/form/form.component.html
@@ -1,7 +1,7 @@
 <form
   [formGroup]="form"
   (ngSubmit)="onSubmit()"
-  class="flex flex-col gap-6 bg-primary-800 p-3 rounded-xl"
+  class="flex flex-col gap-6 bg-primary-800 p-3 rounded-xl ring-2 ring-primary-700 hover:ring-primary-600 duration-500 shadow-[0_0_15px_5px_var(--color-primary-800)] hover:shadow-primary-700"
 >
   <div class="grid grid-cols-2 gap-5">
     <app-input
