update: inputs styles

--- a/src/app/features/me/hire-me/components/input/input.component.html
+++ b/src/app/features/me/hire-me/components/input/input.component.html
@@ -3,7 +3,7 @@
     {{ label() }}
   </label>
   <input
-    class="bg-primary-700 text-primary-100 placeholder-primary-400 px-2.5 py-2 rounded-xl caret-primary-300"
+    class="bg-primary-700 text-primary-100 placeholder-primary-400 px-2.5 py-2 rounded-xl caret-primary-300 border border-primary-600 hover:inset-ring-1 hover:inset-ring-primary-600 focus:inset-ring-1 focus:inset-ring-primary-600 focus:ring-1 focus:ring-primary-500 duration-300 autofill:shadow-[inset_0_0_0px_1000px_var(--color-primary-500)]"
     type="text"
     [id]="name()"
     [placeholder]="placeholder()"
