--- a/src/app/features/me/hire-me/hire-me.component.html
+++ b/src/app/features/me/hire-me/hire-me.component.html
@@ -1,4 +1,4 @@
 <main class="p-7 sm:px-10 md:px-16 flex flex-col gap-7">
-  <app-title headline="Hire Me" />
+  <app-title headline="Let's work together" />
   <app-form />
 </main>
