--- a/src/app/features/me/hire-me/hire-me.component.html
+++ b/src/app/features/me/hire-me/hire-me.component.html
@@ -1,4 +1,19 @@
-<main class="p-7 sm:px-10 md:px-16 flex flex-col gap-7">
+<main class="p-7 flex flex-col gap-7 w-full max-w-[82rem] mx-auto">
   <app-title headline="Let's work together" />
-  <app-form />
+  <div class="grid gap-y-12 gap-x-7 lg:grid-cols-3">
+    <app-card>
+      <section>
+        <app-subtitle headline="My Contact Media" />
+        <hr class="mt-3 mb-7 border-primary-600" />
+        <app-social-media />
+      </section>
+    </app-card>
+    <app-card class="lg:col-span-2">
+      <section>
+        <app-subtitle headline="Send me a Message" />
+        <hr class="mt-3 mb-7 border-primary-600" />
+        <app-form />
+      </section>
+    </app-card>
+  </div>
 </main>
