--- a/src/app/features/me/hire-me/hire-me.component.html
+++ b/src/app/features/me/hire-me/hire-me.component.html
@@ -5,7 +5,7 @@
       <section>
         <app-subtitle headline="My Contact Media" />
         <hr class="mt-3 mb-7 border-primary-600" />
-        <app-social-media />
+        <app-social-media [axis]="socialMediaAxis()" />
       </section>
     </app-card>
     <app-card class="lg:col-span-2">
