--- a/src/app/features/me/components/social-media/social-media.component.html
+++ b/src/app/features/me/components/social-media/social-media.component.html
@@ -9,43 +9,56 @@
   <app-social-button
     url="https://github.com/AlbenBustamante"
     socialName="GitHub"
+    displayName="github.com/AlbenBustamante"
+    [axis]="axis()"
   >
     <svg
       github-icon
-      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
+      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-600 duration-200"
     ></svg>
   </app-social-button>
   <app-social-button
     url="https://linkedin.com/in/albenbustamante/"
     socialName="LinkedIn"
+    displayName="linkedin.com/in/albenbustamante"
+    [axis]="axis()"
   >
     <svg
       linkedin-icon
-      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
+      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-600 duration-200"
     ></svg>
   </app-social-button>
   <app-social-button
     url="https://discordapp.com/users/429028705533165580"
     socialName="Discord"
+    displayName="albenbustamante"
+    [axis]="axis()"
   >
     <svg
       discord-icon
-      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
+      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-600 duration-200"
     ></svg>
   </app-social-button>
   <app-social-button
     url="mailto:albenbustamante@outlook.com"
     socialName="Email"
+    displayName="albenbustamante@outlook.com"
+    [axis]="axis()"
   >
     <svg
       mail-icon
-      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
+      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-600 duration-200"
     ></svg>
   </app-social-button>
-  <app-social-button url="https://wa.me/573165574868" socialName="WhatsApp">
+  <app-social-button
+    url="https://wa.me/573165574868"
+    socialName="WhatsApp"
+    displayName="(+57) 3165574868"
+    [axis]="axis()"
+  >
     <svg
       whatsapp-icon
-      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-500 duration-200"
+      class="size-8 sm:size-9 md:size-10 fill-primary-300 hover:fill-accent-600 duration-200"
     ></svg>
   </app-social-button>
 </div>
