refactor: hire-me cards into component

--- a/src/app/features/me/about-me/skills-and-technologies/components/skill-card/skill-card.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/skill-card/skill-card.component.html
@@ -1,6 +1,6 @@
 <app-card>
-  <article class="flex flex-col gap-7">
-    <header class="border-b-2 border-primary-700">
+  <article>
+    <header class="mb-7 pb-3 border-b border-primary-600">
       <h3
         class="text-primary-50 text-2xl sm:text-3xl text-center font-semibold"
       >
