--- a/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
@@ -1,7 +1,7 @@
 <section class="flex flex-col gap-7">
   <app-subtitle headline="Skills & Technologies" />
   <div
-    class="w-full grid grid-cols-[repeat(auto-fit,_minmax(19rem,_1fr))] lg:grid-cols-2 gap-x-12 gap-y-9"
+    class="w-full grid grid-cols-[repeat(auto-fit,_minmax(20rem,_1fr))] lg:grid-cols-2 gap-x-12 gap-y-9 place-items-stretch"
   >
     <app-skill-card
       class="max-w-xs lg:max-w-md mx-auto"
