--- a/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
@@ -1,15 +1,13 @@
 <section class="flex flex-col gap-7">
   <app-subtitle headline="Skills & Technologies" />
   <div
-    class="w-full grid grid-cols-[repeat(auto-fit,_minmax(20rem,_1fr))] lg:grid-cols-2 gap-x-12 gap-y-9 place-items-stretch"
+    class="grid grid-cols-[repeat(auto-fit,_minmax(18rem,_1fr))] gap-x-12 gap-y-9 sm:auto-rows-fr"
   >
     <app-skill-card
-      class="max-w-xs lg:max-w-md mx-auto"
+      class="size-full"
       headline="Back-End Development"
       [skills]="[
         'Java',
-        'JavaScript',
-        'TypeScript',
         'SQL',
         'Spring Boot',
         'PostgreSQL',
@@ -19,17 +17,25 @@
       ]"
     />
     <app-skill-card
-      class="max-w-xs lg:max-w-md mx-auto"
+      class="size-full"
       headline="Front-End Development"
-      [skills]="['HTML', 'CSS', 'Angular', 'Tailwind CSS', 'Bootstrap']"
+      [skills]="[
+        'HTML',
+        'CSS',
+        'JavaScript',
+        'TypeScript',
+        'Angular',
+        'Tailwind CSS',
+        'Bootstrap'
+      ]"
     />
     <app-skill-card
-      class="max-w-xs lg:max-w-md mx-auto"
+      class="size-full"
       headline="Mobile Development"
       [skills]="['Dart', 'Flutter']"
     />
     <app-skill-card
-      class="max-w-xs lg:max-w-md mx-auto"
+      class="size-full"
       headline="Tools & Platforms"
       [skills]="['Git', 'Docker', 'Intellij IDEA', 'VSCode', 'Linux']"
     />
