improvement: skills layout

--- a/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
@@ -1,7 +1,7 @@
 <section class="flex flex-col gap-7">
   <app-subtitle headline="Skills & Technologies" />
   <div
-    class="grid grid-cols-[repeat(auto-fit,_minmax(18rem,_1fr))] gap-x-12 gap-y-9 sm:auto-rows-fr"
+    class="grid grid-cols-[repeat(auto-fit,_minmax(18rem,_1fr))] gap-x-12 gap-y-9"
   >
     <app-skill-card
       class="size-full"
