--- a/src/app/features/me/about-me/about-me.component.html
+++ b/src/app/features/me/about-me/about-me.component.html
@@ -1,9 +1,11 @@
 <main
-  class="w-full min-h-[calc(100dvh_-_5rem)] p-3 sm:p-4 md:p-5 flex flex-col gap-7"
+  class="w-full min-h-[calc(100dvh_-_5rem)] p-3 sm:p-4 md:p-5 flex flex-col gap-7 sm:gap-9 md:gap-11"
 >
   <app-header />
   <app-skills-and-technologies />
-  <div class="max-sm:flex max-sm:flex-col gap-7 w-full sm:grid sm:grid-cols-2">
+  <div
+    class="max-sm:flex max-sm:flex-col gap-7 md:grid md:grid-cols-2 bg-primary-950 -mx-3 sm:-mx-4 md:-mx-5 p-7 sm:p-9 md:p-11"
+  >
     <app-experience />
     <app-education />
   </div>
